test/typecheck/fail/mismatch_return.sail

val unit -> unit effect pure test

function int test () =
{
  ()
}
